--- a/doc-Managing_Infrastructure_and_Inventory/topics/Reviewing_a_Cluster.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Reviewing_a_Cluster.adoc
@@ -7,8 +7,8 @@ The screen provides you with a Cluster Taskbar, a Cluster Accordion, and a Clust
 .Cluster Management Screen
 image::images/2206.png[]
 
-. Cluster Taskbar: Choose between Configuration, Policy and Monitoring options for the selected Cluster 
-. Cluster Summary: See Cluster summary such as Relationships, Totals for Hosts, Totals for VMs 
-. Cluster Summary Views: Choose between graphical or text view of the cluster summary 
-. Cluster Summary PDF: Generates Cluster summary in PDF format 
-. Cluster Accordion: See details about Properties, Relationships, Storage Relationships for the selected Cluster 
+. *Cluster Taskbar*: Choose between Configuration, Policy and Monitoring options for the selected Cluster 
+. *Cluster Summary*: See Cluster summary such as Relationships, Totals for Hosts, Totals for VMs 
+. *Cluster Summary Views*: Choose between graphical or text view of the cluster summary 
+. *Cluster Summary PDF*: Generates Cluster summary in PDF format 
+. *Cluster Accordion*: See details about Properties, Relationships, Storage Relationships for the selected Cluster 
