--- a/doc-Managing_Infrastructure_and_Inventory/topics/Reviewing_a_Host.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Reviewing_a_Host.adoc
@@ -7,8 +7,8 @@ The screen shows a Host Virtual Thumbnail, a Host Taskbar, a Host Accordion, and
 .Host Management Screen
 image::images/2218.png[]
 
-. Host Task Bar: Use the Host Taskbar to take actions on the selected host 
-. Host Summary: Use the Host Summary to see the properties of a host, drill down to a hosts information, and, view its installed virtual machines. 
-. Host Summary Views: Choose between graphical or text view of the provider summary 
-. Host PDF: Generates Host summary in PDF format 
-. Host Accordion: See details about Properties, Relationships, Security and Configuration for the selected Host 
+. *Host Task Bar*: Use the Host Taskbar to take actions on the selected host 
+. *Host Summary*: Use the Host Summary to see the properties of a host, drill down to a hosts information, and, view its installed virtual machines. 
+. *Host Summary Views*: Choose between graphical or text view of the provider summary 
+. *Host PDF*: Generates Host summary in PDF format 
+. *Host Accordion*: See details about Properties, Relationships, Security and Configuration for the selected Host 
