--- a/doc-Managing_Infrastructure_and_Inventory/topics/Reviewing_a_Repository.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Reviewing_a_Repository.adoc
@@ -7,8 +7,8 @@ The screen provides you with a Repository Taskbar, a Repository Accordion, and a
 .Repository Management Screen
 image::images/2242.png[]
 
-. Repository Taskbar: Perform actions on the selected repository using Configuration and Policy 
-. Repository Summary: See details about the virtual machines related to the selected repository 
-. Repository Views: Choose between graphical or text view of the Repository summary 
-. Repository PDF: Generates repository summary in PDF format 
-. Repository Accordion: See details such as Properties and Relationships of the virtual machine related to the selected repository 
+. *Repository Taskbar*: Perform actions on the selected repository using Configuration and Policy 
+. *Repository Summary*: See details about the virtual machines related to the selected repository 
+. *Repository Views*: Choose between graphical or text view of the Repository summary 
+. *Repository PDF*: Generates repository summary in PDF format 
+. *Repository Accordion*: See details such as Properties and Relationships of the virtual machine related to the selected repository 
