--- a/doc-Managing_Infrastructure_and_Inventory/topics/Reviewing_an_Availability_Zone.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Reviewing_an_Availability_Zone.adoc
@@ -5,5 +5,5 @@ You can click on an Availability Zone to view its details.
 The screen provides you with an Availability Zone Accordion and an Availability Zone Summary page. 
 
 * You can choose between graphical or text view of the datastore summary. 
-* Use the Availability Zone Accordion to view the #Properties# of the zone and its #Relationships# to other cloud resources. 
-* Use the Availability Zone Summary to see details on #Relationships# (#Cloud Provider#, #Instances#) and #Smart Management# (#Company Tags#). 
+* Use the *Availability Zone Accordion* to view the *Properties* of the zone and its *Relationships* to other cloud resources. 
+* Use the *Availability Zone Summary* to see details on *Relationships* (*Cloud Provider*, *Instances*) and *Smart Management* (*Company Tags*). 
