--- a/doc-Managing_Infrastructure_and_Inventory/topics/Right_Sizing_an_Instance.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Right_Sizing_an_Instance.adoc
@@ -5,6 +5,6 @@ CloudForms Management Engine uses the information from the #Normal Operating Ran
 
 . Navigate to menu:Clouds[Instances].
 . Click an instance for right-sizing.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2163.png[] btn:[(Right-Size Recommendations)] button.
+. Click  image:images/1847.png[] (*Configuration)], and then  image:images/2163.png[] (*Right-Size Recommendations*) button.
 
 A new page appears with three levels of Memory and CPU recommendations, Conservative, Moderate, and Aggressive, next to the Normal Operating Range statistics.
