--- a/doc-Managing_Infrastructure_and_Inventory/topics/Right_Sizing_an_Instance.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Right_Sizing_an_Instance.adoc
@@ -1,7 +1,7 @@
 = Right Sizing an Instance
 
 CloudForms Management Engine uses collected statistics to recommend the best size for an instance.
-CloudForms Management Engine uses the information from the #Normal Operating Range# to calculate the recommendations.
+CloudForms Management Engine uses the information from the *Normal Operating Range* to calculate the recommendations.
 
 . Navigate to menu:Clouds[Instances].
 . Click an instance for right-sizing.
