--- a/doc-Managing_Infrastructure_and_Inventory/topics/Searching_by_Virtual_Machine_or_Template_Name.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Searching_by_Virtual_Machine_or_Template_Name.adoc
@@ -5,11 +5,11 @@ To the right of the taskbar on the #Virtual Machines# page, you can enter names 
 You can search in the following ways:
 
 * Type characters that are _included_ in the name.
-  For example, if you type [literal]+sp1+, all Virtual Machines whose names include [literal]+sp1+ appear, such as [literal]+Windows2003sp1+ and [literal]+Sp1clone+.
-* Use [literal]+*+ at the end of a term to search for names that _begin_ with specific characters.
-  For example, type [literal]+v*+ to find all virtual machines whose names begin with the letter [literal]+v+.
-* Use [literal]+*+ at the beginning of a term to search for names that _end_ with specific characters.
-  For example, type [literal]+*sp2+ to find all virtual machines whose names end with [literal]+sp2+.
+  For example, if you type `sp1`, all Virtual Machines whose names include `sp1` appear, such as `Windows2003sp1` and `Sp1clone`.
+* Use `*` at the end of a term to search for names that *begin* with specific characters.
+  For example, type `v*` to find all virtual machines whose names begin with the letter `v`.
+* Use `*` at the beginning of a term to search for names that *end* with specific characters.
+  For example, type `*sp2` to find all virtual machines whose names end with `sp2`.
 * Erase all characters from the search box to go back to viewing all virtual machines.
 
 . Navigate to menu:Infrastructure[Virtual Machines].
@@ -18,7 +18,7 @@ You can search in the following ways:
 
 image::images/2136.png[]
 
-. In the #Name Filter# bar in the upper right corner of the window, type your criteria.
-. Click  image:images/2135.png[](btn:[Search by Name within results)] or press btn:[Enter].
+. In the *Name Filter* bar in the upper right corner of the window, type your criteria.
+. Click  image:images/2135.png[](*Search by Name within results*) or press *Enter*.
 . Type in other criteria to filter on what is currently displayed.
-. Click  image:images/2135.png[] btn:[(Search by Name within results)] or press btn:[Enter].
+. Click  image:images/2135.png[] (*Search by Name within results*) or press *Enter*.
