--- a/doc-Managing_Infrastructure_and_Inventory/topics/Searching_for_Instances_or_Images.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Searching_for_Instances_or_Images.adoc
@@ -1,14 +1,14 @@
 = Searching for Instances or Images
 
-To the right of the taskbar on the #Instances# page, you can enter names or parts of names for searching.
+To the right of the taskbar on the *Instances* page, you can enter names or parts of names for searching.
 You can search in the following ways.
 
-* Type characters that are _included_ in the name.
-  For example, if you type [literal]+sp1+, all Instances whose names include [literal]+sp1+ appear, such as [literal]+Windows2003sp1+ and [literal]+Sp1clone+.
-* Use [literal]+*+ at the end of a term to search for names that _begin_ with specific characters.
-  For example, type [literal]+v*+ to find all instances whose names begin with the letter [literal]+v+.
-* Use [literal]+*+ at the beginning of a term to search for names that _end_ with specific characters.
-  For example, type [literal]+*sp2+ to find all instances whose names end with [literal]+sp2+.
+* Type characters that are *included* in the name.
+  For example, if you type `sp1`, all Instances whose names include `sp1` appear, such as `Windows2003` and `Sp1clone`.
+* Use `*` at the end of a term to search for names that *begin* with specific characters.
+  For example, type `v*` to find all instances whose names begin with the letter `v`.
+* Use `*` at the beginning of a term to search for names that *end* with specific characters.
+  For example, type `*sp2` to find all instances whose names end with `sp2`.
 * Erase all characters from the search box to go back to viewing all instances.
 
 . Navigate to menu:Clouds[Instances].
@@ -17,7 +17,7 @@ You can search in the following ways.
 
 image::images/2136.png[]
 
-. In the #Name Filter# bar in the upper right corner of the window, type your criteria.
-. Click  image:images/2135.png[](btn:[Search by Name within results)] or press btn:[Enter].
+. In the *Name Filter* bar in the upper right corner of the window, type your criteria.
+. Click  image:images/2135.png[](*Search by Name within results*) or press *Enter*.
 . Type in other criteria to filter on what is currently displayed.
-. Click  image:images/2135.png[] btn:[(Search by Name within results)] or press btn:[Enter].
+. Click  image:images/2135.png[] (*Search by Name within results*) or press *Enter*.
