--- a/doc-Managing_Infrastructure_and_Inventory/topics/Setting_Ownership_of_a_Virtual_Machine_or_Template.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Setting_Ownership_of_a_Virtual_Machine_or_Template.adoc
@@ -6,11 +6,11 @@ This allows you an additional way to filter configuration items.
 . Navigate to menu:Infrastructure[Virtual Machines].
 . Click the accordion for the items to analyze.
 . Click the item to set ownership.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2155.png[]btn:[(Set Ownership)] on the taskbar.
-. From the #Select an Owner# dropdown, select a user.
+. Click  image:images/1847.png[] (*Configuration*), and then  image:images/2155.png[](*Set Ownership*) on the taskbar.
+. From the *Select an Owner* dropdown, select a user.
 +
 
 image::images/2162.png[]
 
-. From the #Select a Group# dropdown, select a group.
-. Click btn:[Save].
+. From the *Select a Group* dropdown, select a group.
+. Click *Save*.
