--- a/doc-Managing_Infrastructure_and_Inventory/topics/Sorting_Virtual_Machines_and_Templates.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Sorting_Virtual_Machines_and_Templates.adoc
@@ -6,10 +6,10 @@ Virtual machines and templates can be sorted by Name, Cluster, Host, Datastore, 
 . Click the accordion for the items to sort.
 . To sort virtual machines or templates when in grid or tile view:
 +
-* From the #Sort by# dropdown, click the attribute to sort.
+* From the *Sort by* dropdown, click the attribute to sort.
 
 . To sort virtual machines or templates when in list view:
 +
-* Select the #List View#.
-* Click on the #Column Name# to sort.
-  For example, click on #Cluster# to sort by the name of the cluster.
+* Select the *List View*.
+* Click on the *Column Name* to sort.
+  For example, click on *Cluster* to sort by the name of the cluster.
