--- a/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Clusters.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Clusters.adoc
@@ -1,14 +1,14 @@
 = Tagging Clusters
 
 Use tags to categorize clusters.
-Before assigning tags, create them using the instructions in the _CloudForms General Configuration_ guide.
+Before assigning tags, create them using the instructions in the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[CloudForms General Configuration guide].
 
 . Navigate to menu:Infrastructure[Clusters].
 . Check the Clusters to tag.
-. Click  image:images/1941.png[] btn:[(Policy)], and then  image:images/2158.png[] btn:[(Edit Tags)].
+. Click  image:images/1941.png[] (*Policy*), and then  image:images/2158.png[] (*Edit Tags*).
 +
 
 image::images/2205.png[]
 
 . Select a customer tag from the first dropdown, and then a value for the tag.
-. Select more tags or click btn:[Save] to save your changes.
+. Select more tags or click *Save* to save your changes.
