--- a/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Multiple_Hosts.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Multiple_Hosts.adoc
@@ -1,14 +1,14 @@
 = Tagging Multiple Hosts
 
 To categorize hosts together, apply tags to multiple hosts at the same time.
-Before assigning tags, create them using the instructions in the _CloudForms General Configuration_ guide.
+Before assigning tags, create them using the instructions in the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[CloudForms General Configuration guide].
 
 . Navigate to menu:Infrastructure[Hosts].
 . Check the hosts to tag.
-. Click  image:images/1941.png[] btn:[(Policy)], and then  image:images/2158.png[] btn:[(Edit Tags)].
+. Click  image:images/1941.png[] (*Policy*), and then  image:images/2158.png[] (*Edit Tags*).
 . Select a customer tag from the first dropdown, and then a value for the tag.
 +
 
 image::images/2217.png[]
 
-. Select more tags or click btn:[Save] to save your changes.
+. Select more tags or click *Save* to save your changes.
