--- a/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Security_Groups.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Security_Groups.adoc
@@ -1,11 +1,11 @@
 = Tagging Security Groups
 
 Apply tags to security groups to categorize them.
-Before assigning tags, create them using instructions in the _CloudForms General Configuration_ guide.
+Before assigning tags, create them using instructions in the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[CloudForms General Configuration guide].
 
 . Navigate to menu:Clouds[Security Groups].
 . Select the security group to tag.
-. Click  image:images/1941.png[] btn:[(Policy)], and then  image:images/2158.png[] btn:[(Edit Tags)].
+. Click  image:images/1941.png[] (*Policy*), and then  image:images/2158.png[] (*Edit Tags*).
 . Select a customer tag to assign from the dropdown menu.
 . Select a value to assign.
-. Click btn:[Save].
+. Click *Save*.
