--- a/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_a_Resource_Pool.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_a_Resource_Pool.adoc
@@ -1,11 +1,11 @@
 = Tagging a Resource Pool
 
 Use tags to categorize a resource pool.
-Before assigning tags, create them using the instructions in the _CloudForms General Configuration_ guide.
+Before assigning tags, create them using the instructions in the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[CloudForms General Configuration guide].
 
 . Navigate to menu:Infrastructure[Resource Pools].
 . Click the resource pool to tag.
-. Click  image:images/1941.png[] btn:[(Policy)], and then  image:images/2158.png[] btn:[(Edit Tags)].
+. Click  image:images/1941.png[] (*Policy*), and then  image:images/2158.png[] (*Edit Tags*).
 . Select a customer tag from the first dropdown, and then a value for the tag.
 +
 
