--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_create_a_Host_Filter.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_create_a_Host_Filter.adoc
@@ -4,13 +4,15 @@
 Create a filter for viewing your hosts.
 
 . Navigate to menu:Infrastructure[Hosts].
-. Click  image:images/2125.png[] btn:[(Advanced Search)] to open the expression editor.
+. Click  image:images/2125.png[] (*Advanced Search*) to open the expression editor.
 . Use the expression editor to choose the appropriate options for your criteria.
-. Click btn:[Save].
-. Type in a name for the search expression in btn:[Save this search as].
+. Click *Save*.
+. Type in a name for the search expression in *Save this search as*.
 +
-NOTE: This title depends on the type of resource you are searching.
+[NOTE]
+======
+This title depends on the type of resource you are searching.
+======
+. Click *Save*.
 
-. Click btn:[Save].
-
-The filter is saved and displays in the #My Filters# area of the #Filter# accordion.
+The filter is saved and displays in the *My Filters* area of the *Filter* accordion.
