--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_create_a_comparison_report1.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_create_a_comparison_report1.adoc
@@ -4,9 +4,9 @@
 Create a quick report of to compare clusters in CSV, TXT, or PDF formats.
 
 . Create the comparison to analyze.
-. Click  image:images/2107.png[] btn:[(Download)].
+. Click  image:images/2107.png[] (*Download*).
 . Click the output button for the type of report.
 +
-* Click  image:images/2132.png[] btn:[(Download comparison report in TXT format)] for a text file.
-* Click  image:images/2133.png[] btn:[(Download comparison report in CSV format)] for a comma-separated file.
-* Click  image:images/2134.png[] btn:[(Download comparison report in PDF format)] for a PDF file.
+* Click  image:images/2132.png[] (*Download comparison report in TXT format*) for a text file.
+* Click  image:images/2133.png[] (*Download comparison report in CSV format*) for a comma-separated file.
+* Click  image:images/2134.png[] (*Download comparison report in PDF format*) for a PDF file.
