--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_create_a_drift_report1.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_create_a_drift_report1.adoc
@@ -4,9 +4,9 @@
 Use the drift report feature to export information about your cluster's drift.
 
 . Create a drift of a cluster.
-. Click  image:images/2107.png[] btn:[(Download)].
+. Click  image:images/2107.png[] (*Download*).
 . Click the output button for the type of report you want.
 +
-* Click  image:images/2132.png[] btn:[(Download drift report in TXT format)] for a text file.
-* Click  image:images/2133.png[]btn:[(Download drift report in CSV format)] for a comma-separated file.
-* Click  image:images/2134.png[] btn:[(Download drift report in PDF format)] for a PDF file.
+* Click  image:images/2132.png[] (*Download drift report in TXT format*) for a text file.
+* Click  image:images/2133.png[] (*Download drift report in CSV format*) for a comma-separated file.
+* Click  image:images/2134.png[] (*Download drift report in PDF format*) for a PDF file.
