--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_set_a_default_Host_Filter.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_set_a_default_Host_Filter.adoc
@@ -3,7 +3,7 @@
 
 Set the default filter for viewing your hosts.
 
-. From the #Filters# accordion on the left, click on the filter to use.
-. Click btn:[Set Default] at the top of the filters list.
+. From the *Filters* accordion on the left, click on the filter to use.
+. Click *Set Default* at the top of the filters list.
 
 The default filter is set and marked by a green star next to its name.
