--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_set_ownership.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_set_ownership.adoc
@@ -7,10 +7,10 @@ This allows you an additional way to filter and can be used to enforce quotas.
 . Navigate to menu:Infrastructure[Virtual Machines].
 . Click the accordion for the items to change.
 . Check the items to set ownership.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2155.png[]btn:[(Set Ownership)] on the #Virtual Machine Taskbar#.
-. From the #Select an Owner# dropdown, select a user, and from the #Select a Group# dropdown, select a group.
+. Click  image:images/1847.png[] (*Configuration*), and then  image:images/2155.png[] (*Set Ownership*) on the *Virtual Machine Taskbar*.
+. From the *Select an Owner* dropdown, select a user, and from the *Select a Group* dropdown, select a group.
 +
 
 image::images/2156.png[]
 
-. Click btn:[Save].
+. Click *Save*.
