--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_tag_Virtual_Machines_or_Templates_with_a_common_genealogy.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_tag_Virtual_Machines_or_Templates_with_a_common_genealogy.adoc
@@ -4,7 +4,7 @@
 . Navigate to menu:Infrastructure[Virtual Machines].
 . Click the accordion for the item to view genealogy.
 . Check the items to tag.
-. Click  image:images/1941.png[] btn:[(Policy)], and then  image:images/2158.png[] btn:[(Edit Tags)].
+. Click  image:images/1941.png[] (*Policy*), and then  image:images/2158.png[] (*Edit Tags*).
 . Select a customer tag from the first dropdown, and then a value for the tag.
 +
 
