--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_use_Host_Comparison_Sections.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_use_Host_Comparison_Sections.adoc
@@ -5,18 +5,18 @@ The following procedure describes how to use the host comparison sections.
 
 . On the left of a comparison screen, select the categories of properties to display.
 . Click the plus sign next to the sections name to expand it.
-. The following descriptions pertain to the #Expanded View#				image:images/2023.png[].
+. The following descriptions pertain to the *Expanded View*				image:images/2023.png[].
   Either the value of a property or an icon representing the property displays depending on the properties type.
 +
 * A property displayed in the same color as the base means that the compared host matches the base for that property.
 * A property displayed in a different color from the base means that the compared host does not match the base for that property.
 
-. If you are in the #Compressed View#				image:images/2024.png[], the values of the properties do not display.
+. If you are in the *Compressed View*				image:images/2024.png[], the values of the properties do not display.
   All items are described by the icons shown below.
 +
-* A  image:images/2150.png[] btn:[(checkmark)] means the compared host matches the base for that property.
+* A  image:images/2150.png[] (*checkmark*) means the compared host matches the base for that property.
   Hover over it and the value of the property displays.
-* A  image:images/2151.png[] btn:[(x)] means the compared host does not match the base for that property.
+* A  image:images/2151.png[] (*x*) means the compared host does not match the base for that property.
   Hover over it and the value of the property displays.
 
 . Click the plus sign next to the section name to collapse it.
