--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_view_disk_information.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_view_disk_information.adoc
@@ -5,7 +5,7 @@ Each time a SmartState Analysis is performed on a virtual machine or template, i
 This includes free and used space information as well as the type of disk and file system.
 
 . Navigate to menu:Infrastructure[Virtual Machines].
-. Click on the item to view its #Summary#.
-. From #Datastore Allocation Summary#, click btn:[Disks].
+. Click on the item to view its *Summary*.
+. From *Datastore Allocation Summary*, click *Disks*.
 
 A list of the disks for the item with type, file system, size, and usage information is displayed.
