--- a/doc-Managing_Infrastructure_and_Inventory/topics/Using_an_Instance_or_Image_Filter.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Using_an_Instance_or_Image_Filter.adoc
@@ -1,5 +1,5 @@
 = Using an Instance or Image Filter
 
 . Navigate to menu:Clouds[Instances].
-. Click on the #Instances# or #Images# accordion.
+. Click on the *Instances* or *Images* accordion.
 . Click on the desired filter from the left pane.
