--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Cluster.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Cluster.adoc
@@ -4,19 +4,22 @@ View capacity and utilization for a cluster.
 
 . Navigate to menu:Infrastructure[Clusters].
 . Click the cluster to view Capacity and Utilization data.
-. Click  image:images/1994.png[] btn:[(Monitoring)], and then  image:images/1994.png[] btn:[(Utilization)] or from the accordion menu, click #Properties#, then #Capacity & Utilization#.
+. Click  image:images/1994.png[] (*Monitoring*), and then  image:images/1994.png[] (*Utilization*) or from the accordion menu, click menu:Properties[Capacity & Utilization].
 +
 
 image::images/2208.png[]
 
-. From #Interval#, select to view hourly or daily data points and the dates to view data.
-  Use #Group by# to group the lines by SmartTags.
-  Use #Time Profiles# to select a time range for the data.
+. From *Interval*, select to view hourly or daily data points and the dates to view data.
+  Use *Group by* to group the lines by SmartTags.
+  Use *Time Profiles* to select a time range for the data.
 
 
 image::images/2209.png[]
 
-The #Capacity & Utilization# charts display
+The *Capacity & Utilization* charts display
 
-NOTE: Daily charts only include full days of data.
+[NOTE]
+======
+Daily charts only include full days of data.
 If a day does not include all the 24 data points for a day, the data does not show for that day.
+======
