--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Host.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Host.adoc
@@ -2,8 +2,10 @@
 
 View Capacity & Utilization data for hosts that are part of a cluster.
 
-NOTE: Your CloudForms Management Engine server requires network visibility to the provider assigned the *Server Role* of *Capacity & Utilization Collector* to enable this feature.
-
+[NOTE]
+======
+Your CloudForms Management Engine server requires network visibility to the provider assigned the *Server Role* of *Capacity & Utilization Collector* to enable this feature.
+======
 . Navigate to menu:Infrastructure[Hosts].
 . Click the Host to view capacity data.
 . Click  image:images/1994.png[] (*Monitoring*), and then  image:images/1994.png[] (*Utilization*) or from the Host accordion, click menu:Properties[Capacity & Utilization].
