--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_an_Instance.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_an_Instance.adoc
@@ -2,22 +2,27 @@
 
 View capacity and utilization data for instances that are part of a cluster.
 
-NOTE: You must have a server with network visibility to your provider assigned the server role of #Capacity & Utilization Collector# to use this feature.
-For more information, see the _CloudForms General Configuration_ guide.
-
+[NOTE]
+======
+You must have a server with network visibility to your provider assigned the server role of *Capacity & Utilization Collector* to use this feature.
+For more information, see the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/general-configuration/#profiles[CloudForms General Configuration guide].
+======
 . Navigate to menu:Clouds[Instances].
 . Click the accordion to view capacity data.
 . Click the item to view.
-. Click  image:images/1994.png[] btn:[(Monitoring)], and then  image:images/1994.png[] btn:[(Utilization)] on the taskbar.
+. Click  image:images/1994.png[] (*Monitoring*), and then  image:images/1994.png[] (*Utilization*) on the taskbar.
 . Select to view hourly, most recent hour, or daily data points for the dates to view data.
 +
 
 image::images/2309.png[]
 
-. Select a #Time Profile#.
+. Select a *Time Profile*.
 
 
 image::images/5063.png[]
 
-NOTE: Daily charts only include full days of data.
+[NOTE]
+======
+Daily charts only include full days of data.
 This means CloudForms Management Engine does not show daily data for a day without a complete 24 data point range for a day.
+======
