Removed an extra "the" for readability.

--- a/doc-Managing_Providers/Containers_Providers.adoc
+++ b/doc-Managing_Providers/Containers_Providers.adoc
@@ -55,7 +55,7 @@ To add a `management` service account in an OpenShift cluster, follow these step
 +
 [NOTE]
 ======
-At the moment, the `management-infra-admin` role is needed to address the OpenShift issue link:https://github.com/openshift/origin/issues/5973[#5973].
+At the moment, the `management-infra-admin` role is needed to address OpenShift issue link:https://github.com/openshift/origin/issues/5973[#5973].
 ======
 +
 . To obtain the `management` service account token name, run:
