--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Drift_on_Virtual_Machines_or_Templates.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Drift_on_Virtual_Machines_or_Templates.adoc
@@ -1,7 +1,6 @@
 [[_viewing_drift_on_virtual_machines_or_templates]]
 = Detecting Drift on Virtual Machines or Templates
-
-The configuration of a virtual machine might change over time. #Drift# is the comparison of a virtual machine to itself at different points in time.
+The configuration of a virtual machine might change over time. *Drift* is the comparison of a virtual machine to itself at different points in time.
 The virtual machine needs analysis at least twice to collect this information.
 Detecting drift provides you the following benefits:
 
@@ -12,38 +11,38 @@ Detecting drift provides you the following benefits:
 * Capture the configuration drifts for a single virtual machine across a time period.
 
 . Navigate to menu:Infrastructure[Virtual Machines].
-. Click on the item to view its #Summary#.
-. From the #Relationships# area in the #Summary#, click btn:[Drift History].
+. Click on the item to view its *Summary*.
+. From the *Relationships* area in the *Summary*, click *Drift History*.
 . Check the analyses to compare.
-. Click  image:images/1946.png[] btn:[(Select up to 10 timestamps for Drift Analysis)] at the top of the screen.
+. Click  image:images/1946.png[] (*Select up to 10 timestamps for Drift Analysis*) at the top of the screen.
   The results display.
-. Check the #Drift# sections on the left to view in your comparison.
-. Click btn:[Apply].
-. The following descriptions pertain to the #Expanded View#				image:images/2023.png[].
+. Check the *Drift* sections on the left to view in your comparison.
+. Click *Apply*.
+. The following descriptions pertain to the *Expanded View*				image:images/2023.png[].
   Whether you see the value of a property or an icon representing the property depends on the properties type.
 +
 * A property displayed in the same color as the base means the compared analysis matches the base for that property.
 * A property displayed in a different color from the base means the compared analysis does not match the base for that property.
 
-. If you are in the #Compressed View#				image:images/2024.png[], the values of the properties are not displayed.
+. If you are in the *Compressed View*				image:images/2024.png[], the values of the properties are not displayed.
   All items are described by the icons shown below.
 +
-* A  image:images/2150.png[] btn:[(checkmark)] means that the compared analysis matches the base for that property.
+* A  image:images/2150.png[] (*checkmark*) means that the compared analysis matches the base for that property.
   If you hover over it, the value of the property will display.
-* A  image:images/2177.png[] btn:[(triangle)] means the compared analysis does not match the base for that property.
+* A  image:images/2177.png[] (*triangle*) means the compared analysis does not match the base for that property.
   If you hover over it, the value of the property displays.
   Click the minus sign next to the sections name to collapse it.
 
-. To limit the scope of the view, you have three buttons in the #Resource# button area.
+. To limit the scope of the view, you have three buttons in the *Resource* button area.
 +
-* Click  image:images/2178.png[] btn:[(All attributes)] to see all attributes of the sections you selected.
-* Click  image:images/2204.png[] btn:[(Attributes with different values)] to see only the attributes that are different across the drifts.
-* Click  image:images/2148.png[] btn:[(Attributes with the same values)] to see only the attributes that are the same across drifts.
+* Click  image:images/2178.png[] (*All attributes*) to see all attributes of the sections you selected.
+* Click  image:images/2204.png[] (*Attributes with different values*) to see only the attributes that are different across the drifts.
+* Click  image:images/2148.png[] (*Attributes with the same values*) to see only the attributes that are the same across drifts.
 
-. To limit the mode of the view, there are two buttons in the #Resource# button area.
+. To limit the mode of the view, there are two buttons in the *Resource* button area.
 +
-* Click  image:images/2022.png[] btn:[(Details Mode)] to see all details for an attribute.
-* Click  image:images/2025.png[] btn:[(Exists Mode)] to only see if an attribute exists compared to the base or not.
+* Click  image:images/2022.png[] (*Details Mode*) to see all details for an attribute.
+* Click  image:images/2025.png[] (*Exists Mode*) to only see if an attribute exists compared to the base or not.
   This only applies to attributes that can have a Boolean property.
   For example, a user account exists or does not exist, or a piece of hardware that does or does not exist.
 
