--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Event_Logs_for_an_Instance_or_Image.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Event_Logs_for_an_Instance_or_Image.adoc
@@ -1,14 +1,16 @@
 = Viewing Event Logs for an Instance or Image
 
-Using an #Analysis Profile#, collect event log information from your instances.
-See section _Setting a Default Analysis Profile_ in the _CloudForms General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
+Using an *Analysis Profile*, collect event log information from your instances.
+See section link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/general-configuration/#profiles[Setting a Default Analysis Profile] in the CloudForms General Configuration guide.
 
-NOTE: This feature is only available for Windows.
-
+[NOTE]
+======
+This feature is only available for Windows.
+======
 . Navigate to menu:Clouds[Instances].
 . Click the accordion for the item to view event logs.
-. Click on the item to view its #Summary#.
-. From #Diagnostics# click btn:[Event Logs].
+. Click on the item to view its *Summary*.
+. From *Diagnostics* click *Event Logs*.
 
 The collected event log entries are displayed.
 Sort this list by clicking on the column headers.
