Made "Documentation" lowercase as it's not part of the title in "OpenShift Enterprise Metrics" documentation.

--- a/doc-Managing_Providers/Containers_Providers.adoc
+++ b/doc-Managing_Providers/Containers_Providers.adoc
@@ -78,7 +78,7 @@ Now it is possible to use the token to add a containers provider in CloudForms M
 :leveloffset: 2
 = Configuring OpenShift Metrics
 
-To collect the node, pod, and container metrics, it is required to run the OpenShift Metrics services inside your cluster. For more information, see the link:https://access.redhat.com/documentation/en/openshift-enterprise/3.1/installation-and-configuration/chapter-15-enabling-cluster-metrics[OpenShift Enterprise Metrics Documentation].
+To collect the node, pod, and container metrics, it is required to run the OpenShift Metrics services inside your cluster. For more information, see the link:https://access.redhat.com/documentation/en/openshift-enterprise/3.1/installation-and-configuration/chapter-15-enabling-cluster-metrics[OpenShift Enterprise Metrics documentation].
 
 [NOTE]
 ======
