--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Flavor_Relationships.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Flavor_Relationships.adoc
@@ -1,9 +1,9 @@
 = Viewing Flavor Relationships
 
-Use the Flavor Accordion's #Relationship# section to see items related to the Flavor. 
+Use the Flavor Accordion's *Relationship* section to see items related to the Flavor. 
 
 
 . Navigate to menu:Clouds[Flavors]. 
 . Click a flavor to view the configuration. 
-. From the Flavor Accordion, click #Relationships#. 
-. Click the type of #Resource# to see the flavor's relationships. 
+. From the Flavor Accordion, click *Relationships*. 
+. Click the type of *Resource* to see the flavor's relationships. 
