--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Genealogy_of_a_Virtual_Machine_or_Template.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Genealogy_of_a_Virtual_Machine_or_Template.adoc
@@ -6,5 +6,5 @@ This also allows tagging of virtual machines that share genealogy.
 
 . Navigate to menu:Infrastructure[Virtual Machines].
 . Click the accordion for the item to view genealogy.
-. Click on the item to view its #Summary#.
-. From the #Relationships# area in the #Summary#, click #Genealogy#.
+. Click on the item to view its *Summary*.
+. From the *Relationships* area in the *Summary*, click *Genealogy*.
