--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Genealogy_of_an_Instance_or_Image.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Genealogy_of_an_Instance_or_Image.adoc
@@ -6,5 +6,5 @@ This also allows tagging of instances that share genealogy.
 
 . Navigate to menu:Clouds[Instances].
 . Click the accordion for the item to view genealogy.
-. Click on the item to view its #Summary#.
-. From the #Relationships# area in the #Summary#, click btn:[Genealogy].
+. Click on the item to view its *Summary*.
+. From the *Relationships* area in the *Summary*, click *Genealogy*.
