--- a/doc-Managing_Providers/Managing_Containers.adoc
+++ b/doc-Managing_Providers/Managing_Containers.adoc
@@ -105,7 +105,7 @@ A *Container Node* summary page allows you to view information on different aspe
 
 You can view the timeline of events for a node. To access the timeline from a container nodes summary page, click image:images/1994.png[Monitoring] (*Monitoring*), and then image:images/1995.png[Timelines] (*Timelines*).
 
-For more information on working with timelines, see the following procudure:
+For more information on working with timelines, see the following procedure:
 
 === Viewing a Containers Summary
 
