--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Virtual_Machine_or_Template_Snapshot_Information.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Virtual_Machine_or_Template_Snapshot_Information.adoc
@@ -3,10 +3,12 @@
 View the list of snapshots to see a history of their creation and size.
 CloudForms Management Engine provides the description, size, and creation time of the snapshot as well as a view of the genealogy of the snapshots.
 
-NOTE: Snapshot size is only available after the successful completion of a #SmartState Analysis#.
-
+[NOTE]
+======
+Snapshot size is only available after the successful completion of a *SmartState Analysis*.
+======
 . Navigate to menu:Infrastructure[Virtual Machines].
 . Click the appropriate accordion containing the item you wish to view the snapshots of.
-. Click on the item to view its #Summary#.
-. From the #Summary#, click #Snapshots# in the #Properties# area.
+. Click on the item to view its *Summary*.
+. From the *Summary*, click #Snapshots# in the *Properties* area.
 . The list of snapshots show in a tree format and captures their genealogy.
