--- a/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
@@ -2,7 +2,7 @@
 
 CloudForms Management Engine supports operating with the OpenStack `admin` tenant.
 When creating an OpenStack provider in CloudForms Management Engine, select the OpenStack provider's `admin` user because it is the default administrator of the OpenStack admin tenant.
-When using the `admin` credentials, a user in CloudForms Management Engine provisions into the `admin` tenant, and sees images, networks, and instances that are associated with the admin tenant. 
+When using the `admin` credentials, a user in CloudForms Management Engine provisions into the `admin` tenant, and sees images, networks, and instances that are associated with the `admin` tenant. 
 
 . Navigate to menu:Clouds[Providers]. 
 . Click  image:images/1847.png[] (*Configuration*), then click  image:images/1848.png[] (*Add a New Cloud Provider*). 
