Changed CFME to CloudForms Management Engine in two spots to avoid abbreviations.

--- a/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
@@ -27,14 +27,14 @@ IMPORTANT: To enable discovery of OpenStack cloud providers, ensure that the `ip
 * Enter the user name in the *Username* field. 
 * Enter the user password in the *Password* field. 
 * Confirm the user password in the *Confirm Password* field. 
-* Click *Validate* to confirm CFME can connect to the OpenStack Infrastructure instance. 
+* Click *Validate* to confirm CloudForms Management Engine can connect to the OpenStack Infrastructure instance. 
 
 . If AMQP credentials were changed during the OpenStack provider install, use the *AMQP* tab of the *Credentials* area to provide the login credentials required for the Advanced Message Queuing Protocol messaging service on your OpenStack Nova component: 
 +
 * Enter the administrative user name in the *Username* field. 
 * Enter the user password in the *Password* field. 
 * Confirm the user password in the *Confirm Password* field. 
-* Click *Validate* to confirm CFME can connect to the messaging service. 
+* Click *Validate* to confirm CloudForms Management Engine can connect to the messaging service. 
 . Click *Add*. 
 
 [NOTE]
