Updated markup and changed CFME to CloudForms Management Engine.

--- a/doc-Managing_Providers/topics/Adding_a_Microsoft_System_Center_Virtual_Machine_Manager_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Microsoft_System_Center_Virtual_Machine_Manager_Provider.adoc
@@ -16,7 +16,7 @@ The *Host Name* must use a unique fully qualified domain name.
 +
 . Select *Kerberos* or *Basic (SSL)* from the *Security Protocol* list.
   The default security protocol is Kerberos. 
-. If you select *Kerberos* as the security protocol, enter the #Realm# to which the Microsoft System Center Virtual Machine Manager belongs: for example, www.example.com. 
+. If you select *Kerberos* as the security protocol, enter the *Realm* to which the Microsoft System Center Virtual Machine Manager belongs: for example, www.example.com. 
 . Select the appropriate *Zone* for the provider.
   By default, the zone is set to *default*. 
 . In the *Credentials* area, under *Default*, provide the login credentials required for the Microsoft System Center Virtual Machine Manager administrative user: 
@@ -29,6 +29,6 @@ A user name under the Kerberos security protocol must be in the format `name@rea
 +
 * Enter the password in the *Password* field. 
 * Confirm the password in the *Confirm Password* field. 
-* Click *Validate* to confirm CFME can connect to the Microsoft System Center Virtual Machine Manager. 
+* Click *Validate* to confirm CloudForms Management Engine can connect to the Microsoft System Center Virtual Machine Manager. 
 . Click *Add*.
 
