--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_the_Operating_System_Properties.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_the_Operating_System_Properties.adoc
@@ -1,10 +1,10 @@
 = Viewing the Operating System Properties
 
-View details of the operating system from the #Virtual Machine Summary# or the accordion.
-For Windows systems, see #Account Policies# for the virtual machine.
+View details of the operating system from the *Virtual Machine Summary* or the accordion.
+For Windows systems, see *Account Policies* for the virtual machine.
 
-. From menu:Infrastructure[Virtual Machines], click on the item to view its #Summary#.
-. From the #Properties# section, click btn:[Operating System].
+. From menu:Infrastructure[Virtual Machines], click on the item to view its *Summary*.
+. From the *Properties* section, click *Operating System*.
 
-An expanded view of the operating systems properties and #Account Policies# displays.
+An expanded view of the operating systems properties and *Account Policies* displays.
 This varies based on the operating system.
