--- a/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machine_or_Template_Summary.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machine_or_Template_Summary.adoc
@@ -1,64 +1,66 @@
 = Virtual Machine or Template Summary
 
-When you click on a specific virtual machine or template, you will see the #Virtual Thumbnail#, and an _operating system-specific_ screen of the item, called the #Summary#.
-Where applicable, click on a subcategory of the #Summary# to see more detail on that section. 
+When you click on a specific virtual machine or template, you will see the *Virtual Thumbnail*, and an operating system-specific screen of the item, called the *Summary*.
+Where applicable, click on a subcategory of the *Summary* to see more detail on that section. 
 
-NOTE: When you perform a SmartState Analysis on a virtual machine or template, you get more detailed information in these categories. 
-
-* #Properties# include information such as the base operating system, hostname, IP addresses, Virtual Machine vendor, CPU Affinity, devices attached to the system, and snapshots.
+[NOTE]
+====== 
+When you perform a SmartState Analysis on a virtual machine or template, you get more detailed information in these categories. 
+======
+* *Properties* include information such as the base operating system, hostname, IP addresses, Virtual Machine vendor, CPU Affinity, devices attached to the system, and snapshots.
   This includes the ability to analyze multiple partitions, multiple disks, Linux logical volumes, extended partitions, and Windows drives.
   Some categories can be clicked on for additional detail.
-  For example, click #Container# to view notes associated with a virtual machine. 
+  For example, click *Container* to view notes associated with a virtual machine. 
 +
 
 image::images/2167.png[]
 
-* #Lifecycle# shows the date of discovery and the last analysis.
+* *Lifecycle* shows the date of discovery and the last analysis.
   If a retirement date or owner has been set, these display as well. 
 +
 
 image::images/2168.png[]
 
-* #Relationships# include information on the parent host, genealogy such as parent and child virtual machines, and drift. 
+* *Relationships* include information on the parent host, genealogy such as parent and child virtual machines, and drift. 
 +
 
 image::images/2169.png[]
 
-* #Storage Relationships# shows relationships to Filers, LUNs, Volumes and File Shares. 
-* #VMsafe# shows properties of the VMsafe agent if it is enabled. 
+* *Storage Relationships* shows relationships to Filers, LUNs, Volumes and File Shares. 
+* *VMsafe* shows properties of the VMsafe agent if it is enabled. 
 +
 
 image::images/2170.png[]
 
-* #Normal Operating Ranges# shows the values the normal operating range for this virtual machine.
+* *Normal Operating Ranges* shows the values the normal operating range for this virtual machine.
   These statistics are used in calculating right sizing recommendations. 
 +
 
 image::images/2171.png[]
 
-* #Power Management# displays the current power state, last boot time, and last power state change. #State Changed On# is the date that the virtual machine last changed its power state.
+* *Power Management* displays the current power state, last boot time, and last power state change. *State Changed On* is the date that the virtual machine last changed its power state.
   This is a container view of the power state, therefore a restart of the operating system does not cause the container power state to change and will not update this value. 
 +
 
 image::images/2172.png[]
 
-* #Security# includes information on users, groups, and security patches.
-  Recall that the items shown on the #Summary# screen change based on the guest operating system. 
+* *Security* includes information on users, groups, and security patches.
+  Recall that the items shown on the *Summary* screen change based on the guest operating system. 
 +
 
 image::images/2173.png[]
 
-* #Configuration# includes information on applications, services, packages, and init processes.
+* *Configuration* includes information on applications, services, packages, and init processes.
   This section changes depending on the base operating system. 
 +
 
 image::images/2174.png[]
 
-* #Datastore Allocation Summary# shows how many and how much disk space has been allocated to this virtual machine as well as disk alignment and thin provisioning information. 
-* #Datastore Actual Usage Summary# shows how much disk and memory the virtual machine is actually using. 
+* *Datastore Allocation Summary* shows how many and how much disk space has been allocated to this virtual machine as well as disk alignment and thin provisioning information. 
+* *Datastore Actual Usage Summary* shows how much disk and memory the virtual machine is actually using. 
 +
 
 image::images/2175.png[]
 
-* #Diagnostics# provides a link to viewing running processes and the information from the latest collected event logs. 
-* #Smart Management# shows all tags assigned to this virtual machine. 
+* *Diagnostics* provides a link to viewing running processes and the information from the latest collected event logs. 
+* *Smart Management* shows all tags assigned to this virtual machine. 
