Spelled out CFME; added link to RHEV Installation Guide.

--- a/doc-Managing_Providers/topics/Adding_a_Red_Hat_Enterprise_Virtualization_Manager_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Red_Hat_Enterprise_Virtualization_Manager_Provider.adoc
@@ -20,7 +20,7 @@ The *Host Name* must use a unique fully qualified domain name.
 * Enter the user name, `admin@internal`, in the *Username* field. 
 * Enter the password in the *Password* field. 
 * Confirm the password in the *Confirm Password* field. 
-* Click *Validate* to confirm CFME can connect to the Red Hat Enterprise Virtualization Manager. 
+* Click *Validate* to confirm CloudForms Management Engine can connect to the Red Hat Enterprise Virtualization Manager. 
 . Under *C & U Database* tab, provide the login credentials for the CloudForms user of the Red Hat Enterprise Virtualization Data Warehouse database: 
 +
 [NOTE]
@@ -28,12 +28,12 @@ The *Host Name* must use a unique fully qualified domain name.
 To obtain historical Capacity and Utilization (C & U) data for Red Hat Enterprise Virtualization Manager, you must create a CloudForms Management Engine user in the already-configured Red Hat Enterprise Virtualization Data Warehouse database.
 To create the user, see section link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collection_for_red_hat_enterprise_virtualization_3_3_and_3_4[Data Collection for Red Hat Enterprise Virtualization 3.3 and 3.4] in the Deployment Planning Guide. 
 
-For information on setting up the Data Warehouse service on the Manager, see the Red Hat Enterprise Virtualization Installation Guide. 
+For information on setting up the Data Warehouse service on the Manager, see the link:https://access.redhat.com/documentation/en/red-hat-enterprise-virtualization/[Red Hat Enterprise Virtualization Installation Guide]. 
 ======
 +
 * Enter the database user name in the *Username* field. 
 * Enter the user password in the *Password* field. 
 * Confirm the user password in the *Confirm Password* field. 
-* Click *Validate* to confirm CFME can connect to the database. 
+* Click *Validate* to confirm CloudForms Management Engine can connect to the database. 
 . Click *Save*.
 
