Spelled out CFME.

--- a/doc-Managing_Providers/topics/Adding_a_VMware_vCenter_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_VMware_vCenter_Provider.adoc
@@ -19,5 +19,5 @@ The *Host Name* must use a unique fully qualified domain name.
 * Enter the user name in the *Username* field. 
 * Enter the password in the *Password* field. 
 * Confirm the password in the *Confirm Password* field. 
-* Click *Validate* to confirm CFME can connect to the VMware vCenter. 
+* Click *Validate* to confirm CloudForms Management Engine can connect to the VMware vCenter. 
 . Click *Add*.
