--- a/doc-Managing_Infrastructure_and_Inventory/Instances.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/Instances.adoc
@@ -1,11 +1,11 @@
 [[instances]]
 = Instances
 
-The #Instance# container combined with the ability to analyze information inside each instance provides in-depth information across the cloud environment.
+The *Instance* container combined with the ability to analyze information inside each instance provides in-depth information across the cloud environment.
 This rich set of information enables CloudForms Management Engine users to improve problem resolution times and effectively manage instances in their cloud environment.
 
-The #Instances# pages display all instances the server discovered from your cloud providers.
-The #Instances# taskbar is a menu driven set of buttons that provide access to functions related to instances.
+The *Instances* pages display all instances the server discovered from your cloud providers.
+The *Instances* taskbar is a menu driven set of buttons that provide access to functions related to instances.
 
 
 image::images/4222.png[]
@@ -21,7 +21,7 @@ image::images/4222.png[]
 . Main area in Grid View
 . Cloud/Filter Navigation
 
-Console uses #Virtual Thumbnails# to describe instances and images.
+Console uses *Virtual Thumbnails* to describe instances and images.
 Each thumbnail contains four quadrants by default.
 This allows you to glance at an instance for a quick view of its contents.
 
@@ -167,13 +167,13 @@ image:images/2145.png[]
 
 |===
 
-The #Instances# page has four accordions organizing your instances and images in different ways.
+The *Instances* page has four accordions organizing your instances and images in different ways.
 All of these accordions share a set of common controls
 
-* Use #Instances by Provider# and #Images by Provider# to view your instances and images organized by Provider.
+* Use *Instances by Provider* and *Images by Provider* to view your instances and images organized by Provider.
   In addition, you can see archived and orphaned items here.
-* Use the #Instances# to view, apply filters, and collect information about all of your instances.
-* Use #Images# to view, apply filters, and collect information about all of your images.
+* Use the *Instances* to view, apply filters, and collect information about all of your instances.
+* Use *Images* to view, apply filters, and collect information about all of your images.
 
 Through the console, you are able to view your instances in multiple ways.
 For your instances, you can:
@@ -190,8 +190,8 @@ For your instances, you can:
 [[_sect_filtering_instances_and_images]]
 = Filtering Instances and Images
 
-The #Instance Filter# accordion is provided so that you can easily navigate through groups of instances.
-You can use the ones provided or create your own through #Advanced Filtering# capabilities.
+The *Instance Filter* accordion is provided so that you can easily navigate through groups of instances.
+You can use the ones provided or create your own through *Advanced Filtering* capabilities.
 
 :leveloffset: 3
 include::topics/Using_an_Instance_or_Image_Filter.adoc[]
@@ -244,20 +244,20 @@ Use the comparison feature to:
 . Navigate to menu:Clouds[Instances]
 . Click the accordion for the items to analyze
 . Click the checkboxes for the items to compare
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2148.png[] btn:[(Compare Selected items)].
+. Click  image:images/1847.png[] (*Configuration*), and then  image:images/2148.png[] (*Compare Selected items*).
   The comparison displays in a compressed view with a limited set of properties listed.
-. To delete an item from the comparison, click  image:images/1861.png[]btn:[(Remove this VM from the comparison)] at the bottom of the items column.
-. To view many items on one screen, go to a compressed view by clicking  image:images/2024.png[] btn:[(Compressed View)].
-  To return to an expanded view, click  image:images/2023.png[] btn:[(Expanded View)].
+. To delete an item from the comparison, click  image:images/1861.png[](*Remove this VM from the comparison*) at the bottom of the items column.
+. To view many items on one screen, go to a compressed view by clicking  image:images/2024.png[] (*Compressed View*).
+  To return to an expanded view, click  image:images/2023.png[] (*Expanded View*).
 . To limit the mode of the view, there are two buttons in the task bar.
 +
-* Click  image:images/2022.png[] btn:[(Details Mode)] to see all details for an attribute.
-* Click  image:images/2025.png[] btn:[(Exists Mode)] to limit the view to if an attribute exists compared to the base or not.
+* Click  image:images/2022.png[] (*Details Mode*) to see all details for an attribute.
+* Click  image:images/2025.png[] (*Exists Mode*) to limit the view to if an attribute exists compared to the base or not.
   This only applies to attributes that can have a boolean property.
   For example, a user account exists or does not exist, or a piece of hardware that does or does not exist.
 
 . To change the base instance that all the others are compared to, click its label at the top of its column.
-. To go to the summary screen for an instance, click its btn:[Virtual Thumbnail] or icon.
+. To go to the summary screen for an instance, click its *Virtual Thumbnail* or icon.
 
 :leveloffset: 3
 include::topics/Creating_an_Instance_Comparison_Report.adoc[]
