--- a/doc-Managing_Infrastructure_and_Inventory/Repositories.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/Repositories.adoc
@@ -5,8 +5,10 @@ Repositories are directories where virtual machines not associated with a host a
 CloudForms Management Engine allows discovery and refresh of virtual machines in repositories without any additional software loaded on the computer where the repository is located.
 A SmartProxy is required for analyzing virtual machines in a repository. 
 
-NOTE: All applied filters are in effect. 
-
+[NOTE]
+====== 
+All applied filters are in effect. 
+======
 Use the Repository Taskbar to manage the existence and refreshing of your repositories.
 These buttons are used to manage multiple items at one time.
 To manage a repository, click on that repository in the main area of the screen. 
