--- a/doc-Managing_Infrastructure_and_Inventory/Virtual_Machines.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/Virtual_Machines.adoc
@@ -1,12 +1,13 @@
 [[_sect_virtual_machines]]
 = Virtual Machines
 
+
 The heterogeneous virtual machine container and guest support combined with the ability to analyze information inside the virtual machine - such as disk space, patch level or installed applications - provides in-depth information across the virtual environment.
 This rich set of information enables CloudForms Management Engine users to improve problem resolution times and effectively manage virtual machines.
 
-The #Virtual Machines# pages display all virtual machines that were discovered by your Server.
+The *Virtual Machines* pages display all virtual machines that were discovered by your Server.
 Note that if you have applied a filter to a user, it will be in effect here.
-The #Virtual Machines# taskbar is a menu driven set of buttons that provide access to functions related to virtual machines.
+The *Virtual Machines* taskbar is a menu driven set of buttons that provide access to functions related to virtual machines.
 
 
 image::images/2124.png[]
@@ -22,7 +23,7 @@ image::images/2124.png[]
 . Main area in Grid View
 . Provider/Filter Navigation
 
-The console uses #Virtual Thumbnails# to describe virtual machines and templates.
+The console uses *Virtual Thumbnails* to describe virtual machines and templates.
 Each thumbnail contains four quadrants by default.
 This allows you to glance at a virtual machine for a quick view of its contents.
 
