--- a/doc-Introduction_to_Self_Service_Portal/My_Requests_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/My_Requests_Tab.adoc
@@ -2,7 +2,7 @@
 
 == The My Requests Tab
 
-Use the +My Requests+ tab to filter and view details of the services.
+Use the *My Requests* tab to filter and view details of the services.
 
 image:cfme_ss_myrequests.png[My Requests Tab]
 
