--- a/doc-Introduction_to_Self_Service_Portal/Service_Catalog_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/Service_Catalog_Tab.adoc
@@ -2,7 +2,7 @@
 
 == The Service Catalog Tab
 
-Select +Service Catalog+ to view the service catalog.
+Select *Service Catalog* to view the service catalog.
 
 image:cfme_ss_catalog.png[Service Catalog Tab]
 
