--- a/doc-Managing_Providers/topics/Editing_a_Containers_Provider.adoc
+++ b/doc-Managing_Providers/topics/Editing_a_Containers_Provider.adoc
@@ -10,7 +10,7 @@ Edit information about a provider such as the name, hostname, IP address or port
 +
 [NOTE]
 ======
-The #Type# value is unchangeable.
+The *Type* value is unchangeable.
 ======
 +
 To use a different containers provider, create a new one. 
